--- a/t1.css
+++ b/t1.css
@@ -80,4 +80,10 @@ header h1 {
     border-radius: 4px;
     cursor: pointer;
   }
+footer {
+    text-align: center;
+    padding: 20px;
+    background: #333;
+    color: #ffffff;
+  }  
   
